@@ -1,5 +1,6 @@
 Changes for 1.3.5:
 
+ - added frontend-side support of external checks. (Eugene)
  - fixed trigger dependencies for templated triggers (Eugene)
  - fixed support of 'curl' library (Eugene)
  - added suport of 'automake' v1.6 (Eugene)
